--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,3 @@
 @import "bootstrap";
-/*
- *= require dataTables/jquery.dataTables
- *= require metismenu/dist/metisMenu
- *= require nprogress/nprogress
- *= require malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar
- *= require custom
- */
+/*= require dataTables/jquery.dataTables */
+@import "font-awesome";
