--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,20 +14,18 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "fontawesome.all.min" %>
-    <link
-    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-    rel="stylesheet">
     <%= stylesheet_link_tag "sb-admin-2.min" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 
     <%= javascript_include_tag "jquery.min" %>
     <%= javascript_include_tag "bootstrap.bundle.min" %>
     <%= javascript_include_tag "jquery.easing.min" %>
-    <%= javascript_include_tag "sb-admin-2.min" %>
+    <%= javascript_include_tag "sb-admin-2" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body id="page-top">
+  <body id="page-top" data-new-gr-c-s-check-loaded="14.1097.0" data-gr-ext-installed="">
+
     <div id="wrapper">
 
       <%= render partial: 'layouts/shared/side_menu' %>
