--- a/app/views/layouts/shared/_side_menu.html.erb
+++ b/app/views/layouts/shared/_side_menu.html.erb
@@ -36,7 +36,7 @@
     <hr class="sidebar-divider">
 
     <div class="sidebar-heading">
-        GERENCIAMENTO
+        GERAL
     </div>
 
     <li class="nav-item active">
