--- a/app/views/layouts/shared/_top_menu.html.erb
+++ b/app/views/layouts/shared/_top_menu.html.erb
@@ -23,13 +23,34 @@
                 </a>
 
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+
+                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal" >
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Sair
                 </a>
+
             </div>
         </li>
 
     </ul>
 
 </nav>
+
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Deseja mesmo sair?</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">Clique em "Sair" se você relamente deseja encerrar a sessão.</div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
+                <%= link_to 'Sair', destroy_admin_session_path, method: :delete, class:"btn btn-primary"%>
+            </div>
+        </div>
+    </div>
+</div>
