--- a/app/views/layouts/devise_admin_custom.html.erb
+++ b/app/views/layouts/devise_admin_custom.html.erb
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= favicon_link_tag asset_path('favicon.svg') %>
 
-    <title>ProcStudio</title>
+    <title>ProcStudio | Acesso</title>
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "devise_custom", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <h1>Application</h1>
     <%= yield %>
   </body>
 </html>
