cria dados do usuário (e seed) e ajusta nome no menu superior

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,11 +3,11 @@
 @import "font-awesome";
 
 :root{
-  --default_blue: #2A3F54;
-  --default_white: #FFFFFF;
+  --default-blue: #2A3F54;
+  --default-white: #FFFFFF;
+  --button-success: #28a745;
+  --green-wizard: #1ABB9C;
 }
-
-
 
 // ajuste no menu sandwich
 #sidebarToggleTop{
