--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -16,12 +16,15 @@
     <%= stylesheet_link_tag "fontawesome.all.min" %>
     <%= stylesheet_link_tag "sb-admin-2.min" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "backoffice", "data-turbo-track": "reload" %>
 
     <%= javascript_include_tag "jquery.min" %>
     <%= javascript_include_tag "bootstrap.bundle.min" %>
     <%= javascript_include_tag "jquery.easing.min" %>
     <%= javascript_include_tag "sb-admin-2" %>
+    <%= javascript_include_tag "backoffice" %>
     <%= javascript_importmap_tags %>
+
   </head>
 
   <body id="page-top" data-new-gr-c-s-check-loaded="14.1097.0" data-gr-ext-installed="">
