--- a/app/assets/stylesheets/devise_custom.css
+++ b/app/assets/stylesheets/devise_custom.css
@@ -1,5 +1,5 @@
 body{
-  background-color: var(--default_blue);
+  background-color: var(--default-blue);
 }
 #devise-logo{
   width: 200px;
@@ -9,7 +9,7 @@ body{
   margin: 5% auto;
   text-align: center;
   border-radius: 10px;
-  background-color: var(--default_white);
+  background-color: var(--default-white);
 }
 #devise-container > form{
   padding: 0 15%;
@@ -19,7 +19,7 @@ body{
 }
 #devise-login-button{
   width: 100%;
-  background-color: #28a745;
+  background-color: var(--button-success);
   border: none;
   border-radius: 5px;
   color: #FFFFFF;
