Criando a index do admin

--- a/app/views/layouts/shared/_side_menu.html.erb
+++ b/app/views/layouts/shared/_side_menu.html.erb
@@ -169,7 +169,7 @@
 
                 <% end %>
 
-                <a class="collapse-item" href="login.html">Lista de Usuários</a>
+                <%= link_to 'Lista de Usuários', profile_admins_path, class:'collapse-item' %>
 
                 <%= link_to 'Novo usuário', new_profile_admin_path, class: 'collapse-item' %>
 
