--- a/app/views/profile_admins/index.html.erb
+++ b/app/views/profile_admins/index.html.erb
@@ -1,2 +1,30 @@
-<h1>ProfileAdmins#index</h1>
-<p>Find me in app/views/profile_admins/index.html.erb</p>
+<table id="example" class="table table-striped">
+  <thead>
+
+    <tr>
+      <th>#</th>
+      <th>Nome</th>
+      <th>Atribuição</th>
+      <th>E-mail</th>
+      <th>Ações</th>
+    </tr>
+  </thead>
+
+  <tbody>
+
+    <% @profile_admins.each do |profile| %>
+      <tr>
+        <td><%= profile.id %></td>
+        <td><%= profile.name %></td>
+        <td><%= profile.admin.email %></td>
+        <td>
+          <%= link_to edit_profile_admin_path(profile), class: 'btn btn-primary btn-circle' do %>
+            <i class="fa fa-edit"></i>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+
+  </tbody>
+
+</table>
