--- a/app/views/profile_admins/index.html.erb
+++ b/app/views/profile_admins/index.html.erb
@@ -16,6 +16,7 @@
       <tr>
         <td><%= profile.id %></td>
         <td><%= profile.name %></td>
+        <td><%= profile.role %></td>
         <td><%= profile.admin.email %></td>
         <td>
           <%= link_to edit_profile_admin_path(profile), class: 'btn btn-primary btn-circle' do %>
