--- a/app/views/layouts/shared/_top_menu.html.erb
+++ b/app/views/layouts/shared/_top_menu.html.erb
@@ -12,7 +12,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">
-                  <%= current_admin.profile_admin.nil? ? 'Atualize seu cadastro' : current_admin.profile_admin.name%>
+                  <%= current_admin.profile_admin&.nil? ? 'Atualize seu cadastro' : current_admin.profile_admin.name%>
                 </span>
                 <i class="fa fa-chevron-down"></i>
             </a>
