Adição de email e conta bancária para o admin.

--- a/app/views/profile_admins/shared/_form.html.erb
+++ b/app/views/profile_admins/shared/_form.html.erb
@@ -44,23 +44,49 @@
 
   <fieldset>
     <legend id="addresses-group" class="form-title">Endereço</legend>
-
-    <%= link_to_add_association "Adicionar endereço", f, :addresses, 'data-association-isertion-node':'#addresses-group', 'data-association-insertion-method':'after', class:'btn btn-success' %>
     <hr/>
 
-    <%= f.fields_for :addresses do |ad|%>
-      <%= render partial: 'address_fields', locals: {f: ad} %>
+    <%= link_to_add_association "Adicionar endereço", f, :addresses, 'data-association-isertion-node':'#addresses-group', 'data-association-insertion-method':'after', class:'btn btn-success' %>
+
+    <%= f.fields_for :addresses do |address|%>
+      <%= render partial: 'address_fields', locals: {f: address} %>
     <% end %>
   </fieldset>
 
   <fieldset>
     <legend class="form-title">Contato</legend>
     <hr/>
+
+    <fieldset>
+      <legend id="phone-group" class="form-title">Telefones</legend>
+      <%= link_to_add_association "Adicionar telefone", f, :phones, 'data-association-isertion-node':'#phone-group', 'data-association-insertion-method':'after', class:'btn btn-success' %>
+
+      <%= f.fields_for :phones do |phone|%>
+        <%= render partial: 'phone_fields', locals: {f: phone} %>
+      <% end %>
+    </fieldset>
+
+    <fieldset>
+      <legend id="email-group" class="form-title">E-mails</legend>
+      <%= link_to_add_association "Adicionar e-mail", f, :emails, 'data-association-isertion-node':'#email-group', 'data-association-insertion-method':'after', class:'btn btn-success' %>
+
+      <%= f.fields_for :emails do |email|%>
+        <%= render partial: 'email_fields', locals: {f: email} %>
+      <% end %>
+    </fieldset>
+
   </fieldset>
 
   <fieldset>
-    <legend class="form-title">Dados Bancarios</legend>
+    <legend id="bank-account-group" class="form-title">Dados Bancarios</legend>
     <hr/>
+
+    <%= link_to_add_association "Adicionar conta", f, :bank_accounts, 'data-association-isertion-node':'#bank-account-group', 'data-association-insertion-method':'after', class:'btn btn-success' %>
+
+    <%= f.fields_for :bank_accounts do |bank|%>
+      <%= render partial: 'bank_account_fields', locals: {f: bank} %>
+    <% end %>
+
   </fieldset>
 
   <fieldset>
