--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -16,6 +16,7 @@
     <%= stylesheet_link_tag "fontawesome.all.min" %>
     <%= stylesheet_link_tag "sb-admin-2.min" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "steps", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "backoffice", "data-turbo-track": "reload" %>
 
     <%= javascript_include_tag "jquery.min" %>
